Fix: spacing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,13 @@
 body {
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+  background-color:rgb(177, 135, 217)
 }
-* {
+/* * {
   border-style:double
-}
+} */
 
 h1 {
   text-align: center;
+  margin-bottom: 3%;
 }
 
 .reservations-view {
@@ -17,5 +18,17 @@ h1 {
 .left-section, .right-section {
   background-color: rgba(255, 255, 255, 0.264);
   height: 70vh;
-  width: 50vh;
+  width: 30vw;
+}
+
+.middle-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.lobby-image {
+  height:50vh;
+  width:35vw
 }
